image link added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <title>MERN Internship</title>
 </head>
 <body style="background-color: whitesmoke;">
+    <div style="display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;">
     <h1 style="font-size: 48px;
-    color: rgb(255, 0, 0);"><strong>MERN Internship<strong></strong></h1>
+    color: rgb(255, 0, 0);"><strong><u>MERN Internship</u><strong></strong></h1>
+    <br>
     <img src="./assets/22BCTI81.jpg" alt="NOT AVAILABLE">
+    <br>
+    <a href="./assets/22BCTI81.jpg" style="">Click Here</a>
+    </div>
 </body>
 </html>
