--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
-`<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MERN Internship</title>
+    <title>Home</title>
+    <style>
+        body{
+            background-color: #be8b57;
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
-<body style="background-color: whitesmoke;">
-    <div style="display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;">
-    <h1 style="font-size: 48px;
-    color: rgb(255, 0, 0);"><strong><u>MERN Internship</u><strong></strong></h1>
-    <br>
-    <img src="./assets/22BCTI81.jpg" alt="NOT AVAILABLE">
-    <br>
-    <a href="./assets/22BCTI81.jpg" style="">Click Here</a>
+<body>
+    <div style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
+        <img src="./assets/image.jpg" alt="Image" style="border-radius: 5%;box-shadow: 0 0 100px rgba(0, 0, 0, 0.562);">
+        <div style="height:5%;
+                    width: 15%;
+                    position: absolute;
+                    background-color: rgba(255, 255, 255, 0.575);
+                    border-radius: 10px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;">
+            <a href="about_us.html" style="font-family:Arial, Helvetica, sans-serif;font-size: large;
+            color: rgb(107, 58, 2);"><strong>About Us</strong></a>
+        </div>
     </div>
 </body>
 </html>
