--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <div style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
         <img src="./assets/image.jpg" alt="Image" style="border-radius: 5%;box-shadow: 0 0 100px rgba(0, 0, 0, 0.562);">
-        <div style="height:5%;
-                    width: 15%;
+        <div style="height:50px;
+                    width: 145px;
                     position: absolute;
                     background-color: rgba(255, 255, 255, 0.575);
                     border-radius: 10px;
