--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;">
-            <a href="about_us.html" style="font-family:Arial, Helvetica, sans-serif;font-size: large;
-            color: rgb(107, 58, 2);"><strong>About Us</strong></a>
+            <a href="contact.html" style="font-family:Arial, Helvetica, sans-serif;font-size: large;
+            color: rgb(107, 58, 2);"><strong>Contact Us</strong></a>
         </div>
     </div>
 </body>
