--- a/contact.html
+++ b/contact.html
@@ -39,69 +39,71 @@
     <div style="display: flex;flex-direction:column;align-items: center;justify-content: center;height: 756px;width: 670px;border-radius:50px;background-color: rgba(245, 245, 245, 0.26);">
         <h1 style="font-family: Arial, Helvetica, sans-serif;color: white;font-size: 36px;"><u>Contact Us</u></h1>
         <div style="display:flex;flex-direction: column;align-items: center;height :85%;width: 75%;">
-            <table>
-                <tr>
-                    <td>First Name</td>
-                    <td>&emsp;&emsp;</td>
-                    <td><input type="text" id="Fname" name="Fname" required></td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td>Last Name</td>
-                    <td>&emsp;&emsp;</td>
-                    <td><input type="text" id="Lname" name="Lname" required></td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td>Company Name</td>
-                    <td>&emsp;&emsp;</td>
-                    <td><input type="text" id="Cname" name="Cname" required></td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td>Company Email</td>
-                    <td>&emsp;&emsp;</td>
-                    <td><input type="email" id="Cemail" name="Cemail" required></td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td>Phone No.</td>
-                    <td>&emsp;&emsp;</td>
-                    <td><input type="number" id="phno" name="phno" required></td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td>Job Title</td>
-                    <td>&emsp;&emsp;</td>
-                    <td><input type="text" name="title" id="title" required></td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td>Country</td>
-                    <td>&emsp;&emsp;</td>
-                    <td><input type="text" name="title" id="title" required></td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td>Message</td>
-                    <td>&emsp;&emsp;</td>
-                    <td><textarea id="message" name="message" required></textarea></td>
-                </tr>
-            </table>
+            <form action="contact.php">
+                <table>
+                    <tr>
+                        <td>First Name</td>
+                        <td>&emsp;&emsp;</td>
+                        <td><input type="text" id="Fname" name="Fname" required></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>Last Name</td>
+                        <td>&emsp;&emsp;</td>
+                        <td><input type="text" id="Lname" name="Lname" required></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>Company Name</td>
+                        <td>&emsp;&emsp;</td>
+                        <td><input type="text" id="Cname" name="Cname" required></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>Company Email</td>
+                        <td>&emsp;&emsp;</td>
+                        <td><input type="email" id="Cemail" name="Cemail" required></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>Phone No.</td>
+                        <td>&emsp;&emsp;</td>
+                        <td><input type="number" id="phno" name="phno" required></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>Job Title</td>
+                        <td>&emsp;&emsp;</td>
+                        <td><input type="text" name="title" id="title" required></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>Country</td>
+                        <td>&emsp;&emsp;</td>
+                        <td><input type="text" name="title" id="title" required></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>Message</td>
+                        <td>&emsp;&emsp;</td>
+                        <td><textarea id="message" name="message" required></textarea></td>
+                    </tr>
+                </table>
+            </form>
             <br>
             
             <input type="submit" value="SEND MESSAGE" style="width: 150PX;
