--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
-        <img src="./assets/image.jpg" alt="Image" style="border-radius: 5%;box-shadow: 0 0 100px rgba(0, 0, 0, 0.562);">
+        <img src="./assets/image.jpg" alt="Image" style="border-radius: 5%;box-shadow: 0 0 100px rgba(0, 0, 0, 0.562);opacity: 0.4;">
         <div style="height:50px;
                     width: 145px;
                     position: absolute;
@@ -27,7 +27,7 @@
                     align-items: center;
                     justify-content: center;">
             <a href="contact.html" style="font-family:Arial, Helvetica, sans-serif;font-size: large;
-            color: rgb(107, 58, 2);"><strong>Contact Us</strong></a>
+            color: rgb(107, 58, 2);"><img src="./assets/cont.webp" alt="Contact Us"></a>
         </div>
     </div>
 </body>
